# fastapi-redis

./: .env.sample  .gitignore  docker-compose.yml  pyproject.toml
app/: config.py  database.py  enums.py  main.py  models.py  router.py  schema.py  schemas.py
app/models/auth/: schemas.py
app/models/task/: models.py
app/models/user/: crud.py  models.py  schemas.py
app/router/: auth.py  base.py  task.py
app/utils/auth/: jwt.py
app/utils/base/: exceptions.py
app/utils/user/: password.py
